Spin/Src6.3.2/y.output
Terminals unused in grammar

   PREPROC
   MTYPE
   LABEL
   NON_ATOMIC


Grammar

    0 $accept: program $end

    1 program: units

    2 units: unit
    3      | units unit

    4 unit: proc
    5     | init
    6     | claim
    7     | ltl
    8     | events
    9     | one_decl
   10     | utype
   11     | c_fcts
   12     | ns
   13     | semi
   14     | error

   15 l_par: '('

   16 r_par: ')'

   17 $@1: %empty

   18 $@2: %empty

   19 proc: inst proctype NAME $@1 l_par decl r_par $@2 Opt_priority Opt_enabler body

   20 proctype: PROCTYPE
   21         | D_PROCTYPE

   22 inst: %empty
   23     | ACTIVE
   24     | ACTIVE '[' const_expr ']'
   25     | ACTIVE '[' NAME ']'

   26 $@3: %empty

   27 init: INIT $@3 Opt_priority body

   28 $@4: %empty

   29 ltl: LTL optname2 $@4 ltl_body

   30 ltl_body: '{' full_expr OS '}'
   31         | error

   32 $@5: %empty

   33 claim: CLAIM optname $@5 body

   34 optname: %empty
   35        | NAME

   36 optname2: %empty
   37         | NAME

   38 $@6: %empty

   39 events: TRACE $@6 body

   40 $@7: %empty

   41 utype: TYPEDEF NAME $@7 '{' decl_lst '}'

   42 nm: NAME
   43   | INAME

   44 $@8: %empty

   45 ns: INLINE nm l_par $@8 args r_par

   46 c_fcts: ccode
   47       | cstate

   48 cstate: C_STATE STRING STRING
   49       | C_TRACK STRING STRING
   50       | C_STATE STRING STRING STRING
   51       | C_TRACK STRING STRING STRING

   52 ccode: C_CODE
   53      | C_DECL

   54 cexpr: C_EXPR

   55 $@9: %empty

   56 $@10: %empty

   57 body: '{' $@9 sequence OS $@10 '}'

   58 sequence: step
   59         | sequence MS step

   60 step: one_decl
   61     | XU vref_lst
   62     | NAME ':' one_decl
   63     | NAME ':' XU
   64     | stmnt

   65 $@11: %empty

   66 step: stmnt UNLESS $@11 stmnt

   67 vis: %empty
   68    | HIDDEN
   69    | SHOW
   70    | ISLOCAL

   71 asgn: %empty
   72     | ASGN

   73 one_decl: vis TYPE var_list
   74         | vis UNAME var_list
   75         | vis TYPE asgn '{' nlst '}'

   76 decl_lst: one_decl
   77         | one_decl SEMI decl_lst

   78 decl: %empty
   79     | decl_lst

   80 vref_lst: varref
   81         | varref ',' vref_lst

   82 var_list: ivar
   83         | ivar ',' var_list

   84 c_list: CONST
   85       | CONST ',' c_list

   86 ivar: vardcl
   87     | vardcl ASGN '{' c_list '}'
   88     | vardcl ASGN expr
   89     | vardcl ASGN ch_init

   90 ch_init: '[' const_expr ']' OF '{' typ_list '}'

   91 vardcl: NAME
   92       | NAME ':' CONST
   93       | NAME '[' const_expr ']'

   94 varref: cmpnd

   95 pfld: NAME

   96 $@12: %empty

   97 pfld: NAME $@12 '[' expr ']'

   98 $@13: %empty

   99 cmpnd: pfld $@13 sfld

  100 sfld: %empty
  101     | '.' cmpnd

  102 stmnt: Special
  103      | Stmnt

  104 $@14: %empty

  105 for_pre: FOR l_par $@14 varref

  106 for_post: '{' sequence OS '}'

  107 $@15: %empty

  108 Special: varref RCV $@15 rargs

  109 $@16: %empty

  110 Special: varref SND $@16 margs

  111 $@17: %empty

  112 Special: for_pre ':' expr DOTDOT expr r_par $@17 for_post

  113 @18: %empty

  114 Special: for_pre IN varref r_par @18 for_post
  115        | SELECT l_par varref ':' expr DOTDOT expr r_par
  116        | IF options FI

  117 $@19: %empty

  118 Special: DO $@19 options OD
  119        | BREAK
  120        | GOTO NAME
  121        | NAME ':' stmnt
  122        | NAME ':'
  123        | error

  124 Stmnt: varref ASGN full_expr
  125      | varref INCR
  126      | varref DECR
  127      | SET_P l_par two_args r_par

  128 $@20: %empty

  129 Stmnt: PRINT l_par STRING $@20 prargs r_par
  130      | PRINTM l_par varref r_par
  131      | PRINTM l_par CONST r_par
  132      | ASSERT full_expr
  133      | ccode

  134 $@21: %empty

  135 Stmnt: varref R_RCV $@21 rargs

  136 $@22: %empty

  137 Stmnt: varref RCV $@22 LT rargs GT

  138 $@23: %empty

  139 Stmnt: varref R_RCV $@23 LT rargs GT

  140 $@24: %empty

  141 Stmnt: varref O_SND $@24 margs
  142      | full_expr
  143      | ELSE

  144 $@25: %empty

  145 Stmnt: ATOMIC '{' $@25 sequence OS '}'

  146 $@26: %empty

  147 Stmnt: D_STEP '{' $@26 sequence OS '}'

  148 $@27: %empty

  149 Stmnt: '{' $@27 sequence OS '}'

  150 $@28: %empty

  151 $@29: %empty

  152 Stmnt: INAME $@28 l_par args r_par $@29 Stmnt

  153 $@30: %empty

  154 $@31: %empty

  155 Stmnt: varref ASGN INAME $@30 l_par args r_par $@31 Stmnt
  156      | RETURN full_expr

  157 options: option
  158        | option options

  159 $@32: %empty

  160 option: SEP $@32 sequence OS

  161 OS: %empty
  162   | semi

  163 semi: SEMI
  164     | ARROW

  165 MS: semi
  166   | MS semi

  167 aname: NAME
  168      | PNAME

  169 const_expr: CONST
  170           | '-' const_expr
  171           | l_par const_expr r_par
  172           | const_expr '+' const_expr
  173           | const_expr '-' const_expr
  174           | const_expr '*' const_expr
  175           | const_expr '/' const_expr
  176           | const_expr '%' const_expr

  177 expr: l_par expr r_par
  178     | expr '+' expr
  179     | expr '-' expr
  180     | expr '*' expr
  181     | expr '/' expr
  182     | expr '%' expr
  183     | expr '&' expr
  184     | expr '^' expr
  185     | expr '|' expr
  186     | expr GT expr
  187     | expr LT expr
  188     | expr GE expr
  189     | expr LE expr
  190     | expr EQ expr
  191     | expr NE expr
  192     | expr AND expr
  193     | expr OR expr
  194     | expr LSHIFT expr
  195     | expr RSHIFT expr
  196     | '~' expr
  197     | '-' expr
  198     | SND expr
  199     | l_par expr ARROW expr ':' expr r_par

  200 $@33: %empty

  201 expr: RUN aname $@33 l_par args r_par Opt_priority
  202     | LEN l_par varref r_par
  203     | ENABLED l_par expr r_par
  204     | GET_P l_par expr r_par

  205 $@34: %empty

  206 expr: varref RCV $@34 '[' rargs ']'

  207 $@35: %empty

  208 expr: varref R_RCV $@35 '[' rargs ']'
  209     | varref
  210     | cexpr
  211     | CONST
  212     | TIMEOUT
  213     | NONPROGRESS
  214     | PC_VAL l_par expr r_par
  215     | PNAME '[' expr ']' '@' NAME
  216     | PNAME '[' expr ']' ':' pfld
  217     | PNAME '@' NAME
  218     | PNAME ':' pfld
  219     | ltl_expr

  220 Opt_priority: %empty
  221             | PRIORITY CONST

  222 full_expr: expr
  223          | Expr

  224 ltl_expr: expr UNTIL expr
  225         | expr RELEASE expr
  226         | expr WEAK_UNTIL expr
  227         | expr IMPLIES expr
  228         | expr EQUIV expr
  229         | NEXT expr
  230         | ALWAYS expr
  231         | EVENTUALLY expr

  232 Expr: Probe
  233     | l_par Expr r_par
  234     | Expr AND Expr
  235     | Expr AND expr
  236     | expr AND Expr
  237     | Expr OR Expr
  238     | Expr OR expr
  239     | expr OR Expr

  240 Probe: FULL l_par varref r_par
  241      | NFULL l_par varref r_par
  242      | EMPTY l_par varref r_par
  243      | NEMPTY l_par varref r_par

  244 Opt_enabler: %empty
  245            | PROVIDED l_par full_expr r_par
  246            | PROVIDED error

  247 basetype: TYPE
  248         | UNAME
  249         | error

  250 typ_list: basetype
  251         | basetype ',' typ_list

  252 two_args: expr ',' expr

  253 args: %empty
  254     | arg

  255 prargs: %empty
  256       | ',' arg

  257 margs: arg
  258      | expr l_par arg r_par

  259 arg: expr
  260    | expr ',' arg

  261 rarg: varref
  262     | EVAL l_par expr r_par
  263     | CONST
  264     | '-' CONST

  265 rargs: rarg
  266      | rarg ',' rargs
  267      | rarg l_par rargs r_par
  268      | l_par rargs r_par

  269 nlst: NAME
  270     | nlst NAME
  271     | nlst ','


Terminals, with rules where they appear

$end (0) 0
'%' (37) 176 182
'&' (38) 183
'(' (40) 15
')' (41) 16
'*' (42) 174 180
'+' (43) 172 178
',' (44) 81 83 85 251 252 256 260 266 271
'-' (45) 170 173 179 197 264
'.' (46) 101
'/' (47) 175 181
':' (58) 62 63 92 112 115 121 122 199 216 218
'@' (64) 215 217
'[' (91) 24 25 90 93 97 206 208 215 216
']' (93) 24 25 90 93 97 206 208 215 216
'^' (94) 184
'{' (123) 30 41 57 75 87 90 106 145 147 149
'|' (124) 185
'}' (125) 30 41 57 75 87 90 106 145 147 149
'~' (126) 196
error (256) 14 31 123 246 249
ASSERT (258) 132
PRINT (259) 129
PRINTM (260) 130 131
PREPROC (261)
C_CODE (262) 52
C_DECL (263) 53
C_EXPR (264) 54
C_STATE (265) 48 50
C_TRACK (266) 49 51
RUN (267) 201
LEN (268) 202
ENABLED (269) 203
SET_P (270) 127
GET_P (271) 204
EVAL (272) 262
PC_VAL (273) 214
TYPEDEF (274) 41
MTYPE (275)
INLINE (276) 45
RETURN (277) 156
LABEL (278)
OF (279) 90
GOTO (280) 120
BREAK (281) 119
ELSE (282) 143
SEMI (283) 77 163
ARROW (284) 164 199
IF (285) 116
FI (286) 116
DO (287) 118
OD (288) 118
FOR (289) 105
SELECT (290) 115
IN (291) 114
SEP (292) 160
DOTDOT (293) 112 115
ATOMIC (294) 145
NON_ATOMIC (295)
D_STEP (296) 147
UNLESS (297) 66
TIMEOUT (298) 212
NONPROGRESS (299) 213
ACTIVE (300) 23 24 25
PROCTYPE (301) 20
D_PROCTYPE (302) 21
HIDDEN (303) 68
SHOW (304) 69
ISLOCAL (305) 70
PRIORITY (306) 221
PROVIDED (307) 245 246
FULL (308) 240
EMPTY (309) 242
NFULL (310) 241
NEMPTY (311) 243
CONST (312) 84 85 92 131 169 211 221 263 264
TYPE (313) 73 75 247
XU (314) 61 63
NAME (315) 19 25 35 37 41 42 62 63 91 92 93 95 97 120 121 122 167 215
    217 269 270
UNAME (316) 74 248
PNAME (317) 168 215 216 217 218
INAME (318) 43 152 155
STRING (319) 48 49 50 51 129
CLAIM (320) 33
TRACE (321) 39
INIT (322) 27
LTL (323) 29
ASGN (324) 72 87 88 89 124 155
SND (325) 110 198
O_SND (326) 141
RCV (327) 108 137 206
R_RCV (328) 135 139 208
IMPLIES (329) 227
EQUIV (330) 228
OR (331) 193 237 238 239
AND (332) 192 234 235 236
ALWAYS (333) 230
EVENTUALLY (334) 231
UNTIL (335) 224
WEAK_UNTIL (336) 226
RELEASE (337) 225
NEXT (338) 229
EQ (339) 190
NE (340) 191
GT (341) 137 139 186
LT (342) 137 139 187
GE (343) 188
LE (344) 189
LSHIFT (345) 194
RSHIFT (346) 195
INCR (347) 125
DECR (348) 126
UMIN (349)
NEG (350)
DOT (351)


Nonterminals, with rules where they appear

$accept (116)
    on left: 0
program (117)
    on left: 1, on right: 0
units (118)
    on left: 2 3, on right: 1 3
unit (119)
    on left: 4 5 6 7 8 9 10 11 12 13 14, on right: 2 3
l_par (120)
    on left: 15, on right: 19 45 105 115 127 129 130 131 152 155 171
    177 199 201 202 203 204 214 233 240 241 242 243 245 258 262 267
    268
r_par (121)
    on left: 16, on right: 19 45 112 114 115 127 129 130 131 152 155
    171 177 199 201 202 203 204 214 233 240 241 242 243 245 258 262
    267 268
proc (122)
    on left: 19, on right: 4
$@1 (123)
    on left: 17, on right: 19
$@2 (124)
    on left: 18, on right: 19
proctype (125)
    on left: 20 21, on right: 19
inst (126)
    on left: 22 23 24 25, on right: 19
init (127)
    on left: 27, on right: 5
$@3 (128)
    on left: 26, on right: 27
ltl (129)
    on left: 29, on right: 7
$@4 (130)
    on left: 28, on right: 29
ltl_body (131)
    on left: 30 31, on right: 29
claim (132)
    on left: 33, on right: 6
$@5 (133)
    on left: 32, on right: 33
optname (134)
    on left: 34 35, on right: 33
optname2 (135)
    on left: 36 37, on right: 29
events (136)
    on left: 39, on right: 8
$@6 (137)
    on left: 38, on right: 39
utype (138)
    on left: 41, on right: 10
$@7 (139)
    on left: 40, on right: 41
nm (140)
    on left: 42 43, on right: 45
ns (141)
    on left: 45, on right: 12
$@8 (142)
    on left: 44, on right: 45
c_fcts (143)
    on left: 46 47, on right: 11
cstate (144)
    on left: 48 49 50 51, on right: 47
ccode (145)
    on left: 52 53, on right: 46 133
cexpr (146)
    on left: 54, on right: 210
body (147)
    on left: 57, on right: 19 27 33 39
$@9 (148)
    on left: 55, on right: 57
$@10 (149)
    on left: 56, on right: 57
sequence (150)
    on left: 58 59, on right: 57 59 106 145 147 149 160
step (151)
    on left: 60 61 62 63 64 66, on right: 58 59
$@11 (152)
    on left: 65, on right: 66
vis (153)
    on left: 67 68 69 70, on right: 73 74 75
asgn (154)
    on left: 71 72, on right: 75
one_decl (155)
    on left: 73 74 75, on right: 9 60 62 76 77
decl_lst (156)
    on left: 76 77, on right: 41 77 79
decl (157)
    on left: 78 79, on right: 19
vref_lst (158)
    on left: 80 81, on right: 61 81
var_list (159)
    on left: 82 83, on right: 73 74 83
c_list (160)
    on left: 84 85, on right: 85 87
ivar (161)
    on left: 86 87 88 89, on right: 82 83
ch_init (162)
    on left: 90, on right: 89
vardcl (163)
    on left: 91 92 93, on right: 86 87 88 89
varref (164)
    on left: 94, on right: 80 81 105 108 110 114 115 124 125 126 130
    135 137 139 141 155 202 206 208 209 240 241 242 243 261
pfld (165)
    on left: 95 97, on right: 99 216 218
$@12 (166)
    on left: 96, on right: 97
cmpnd (167)
    on left: 99, on right: 94 101
$@13 (168)
    on left: 98, on right: 99
sfld (169)
    on left: 100 101, on right: 99
stmnt (170)
    on left: 102 103, on right: 64 66 121
for_pre (171)
    on left: 105, on right: 112 114
$@14 (172)
    on left: 104, on right: 105
for_post (173)
    on left: 106, on right: 112 114
Special (174)
    on left: 108 110 112 114 115 116 118 119 120 121 122 123, on right:
    102
$@15 (175)
    on left: 107, on right: 108
$@16 (176)
    on left: 109, on right: 110
$@17 (177)
    on left: 111, on right: 112
@18 (178)
    on left: 113, on right: 114
$@19 (179)
    on left: 117, on right: 118
Stmnt (180)
    on left: 124 125 126 127 129 130 131 132 133 135 137 139 141 142
    143 145 147 149 152 155 156, on right: 103 152 155
$@20 (181)
    on left: 128, on right: 129
$@21 (182)
    on left: 134, on right: 135
$@22 (183)
    on left: 136, on right: 137
$@23 (184)
    on left: 138, on right: 139
$@24 (185)
    on left: 140, on right: 141
$@25 (186)
    on left: 144, on right: 145
$@26 (187)
    on left: 146, on right: 147
$@27 (188)
    on left: 148, on right: 149
$@28 (189)
    on left: 150, on right: 152
$@29 (190)
    on left: 151, on right: 152
$@30 (191)
    on left: 153, on right: 155
$@31 (192)
    on left: 154, on right: 155
options (193)
    on left: 157 158, on right: 116 118 158
option (194)
    on left: 160, on right: 157 158
$@32 (195)
    on left: 159, on right: 160
OS (196)
    on left: 161 162, on right: 30 57 106 145 147 149 160
semi (197)
    on left: 163 164, on right: 13 162 165 166
MS (198)
    on left: 165 166, on right: 59 166
aname (199)
    on left: 167 168, on right: 201
const_expr (200)
    on left: 169 170 171 172 173 174 175 176, on right: 24 90 93 170
    171 172 173 174 175 176
expr (201)
    on left: 177 178 179 180 181 182 183 184 185 186 187 188 189 190
    191 192 193 194 195 196 197 198 199 201 202 203 204 206 208 209
    210 211 212 213 214 215 216 217 218 219, on right: 88 97 112 115
    177 178 179 180 181 182 183 184 185 186 187 188 189 190 191 192
    193 194 195 196 197 198 199 203 204 214 215 216 222 224 225 226
    227 228 229 230 231 235 236 238 239 252 258 259 260 262
$@33 (202)
    on left: 200, on right: 201
$@34 (203)
    on left: 205, on right: 206
$@35 (204)
    on left: 207, on right: 208
Opt_priority (205)
    on left: 220 221, on right: 19 27 201
full_expr (206)
    on left: 222 223, on right: 30 124 132 142 156 245
ltl_expr (207)
    on left: 224 225 226 227 228 229 230 231, on right: 219
Expr (208)
    on left: 232 233 234 235 236 237 238 239, on right: 223 233 234
    235 236 237 238 239
Probe (209)
    on left: 240 241 242 243, on right: 232
Opt_enabler (210)
    on left: 244 245 246, on right: 19
basetype (211)
    on left: 247 248 249, on right: 250 251
typ_list (212)
    on left: 250 251, on right: 90 251
two_args (213)
    on left: 252, on right: 127
args (214)
    on left: 253 254, on right: 45 152 155 201
prargs (215)
    on left: 255 256, on right: 129
margs (216)
    on left: 257 258, on right: 110 141
arg (217)
    on left: 259 260, on right: 254 256 257 258 260
rarg (218)
    on left: 261 262 263 264, on right: 265 266 267
rargs (219)
    on left: 265 266 267 268, on right: 108 135 137 139 206 208 266
    267 268
nlst (220)
    on left: 269 270 271, on right: 75 270 271


State 0

    0 $accept: . program $end

    error    shift, and go to state 1
    C_CODE   shift, and go to state 2
    C_DECL   shift, and go to state 3
    C_STATE  shift, and go to state 4
    C_TRACK  shift, and go to state 5
    TYPEDEF  shift, and go to state 6
    INLINE   shift, and go to state 7
    SEMI     shift, and go to state 8
    ARROW    shift, and go to state 9
    ACTIVE   shift, and go to state 10
    HIDDEN   shift, and go to state 11
    SHOW     shift, and go to state 12
    ISLOCAL  shift, and go to state 13
    CLAIM    shift, and go to state 14
    TRACE    shift, and go to state 15
    INIT     shift, and go to state 16
    LTL      shift, and go to state 17

    PROCTYPE    reduce using rule 22 (inst)
    D_PROCTYPE  reduce using rule 22 (inst)
    TYPE        reduce using rule 67 (vis)
    UNAME       reduce using rule 67 (vis)

    program   go to state 18
    units     go to state 19
    unit      go to state 20
    proc      go to state 21
    inst      go to state 22
    init      go to state 23
    ltl       go to state 24
    claim     go to state 25
    events    go to state 26
    utype     go to state 27
    ns        go to state 28
    c_fcts    go to state 29
    cstate    go to state 30
    ccode     go to state 31
    vis       go to state 32
    one_decl  go to state 33
    semi      go to state 34


State 1

   14 unit: error .

    $default  reduce using rule 14 (unit)


State 2

   52 ccode: C_CODE .

    $default  reduce using rule 52 (ccode)


State 3

   53 ccode: C_DECL .

    $default  reduce using rule 53 (ccode)


State 4

   48 cstate: C_STATE . STRING STRING
   50       | C_STATE . STRING STRING STRING

    STRING  shift, and go to state 35


State 5

   49 cstate: C_TRACK . STRING STRING
   51       | C_TRACK . STRING STRING STRING

    STRING  shift, and go to state 36


State 6

   41 utype: TYPEDEF . NAME $@7 '{' decl_lst '}'

    NAME  shift, and go to state 37


State 7

   45 ns: INLINE . nm l_par $@8 args r_par

    NAME   shift, and go to state 38
    INAME  shift, and go to state 39

    nm  go to state 40


State 8

  163 semi: SEMI .

    $default  reduce using rule 163 (semi)


State 9

  164 semi: ARROW .

    $default  reduce using rule 164 (semi)


State 10

   23 inst: ACTIVE .
   24     | ACTIVE . '[' const_expr ']'
   25     | ACTIVE . '[' NAME ']'

    '['  shift, and go to state 41

    $default  reduce using rule 23 (inst)


State 11

   68 vis: HIDDEN .

    $default  reduce using rule 68 (vis)


State 12

   69 vis: SHOW .

    $default  reduce using rule 69 (vis)


State 13

   70 vis: ISLOCAL .

    $default  reduce using rule 70 (vis)


State 14

   33 claim: CLAIM . optname $@5 body

    NAME  shift, and go to state 42

    $default  reduce using rule 34 (optname)

    optname  go to state 43


State 15

   39 events: TRACE . $@6 body

    $default  reduce using rule 38 ($@6)

    $@6  go to state 44


State 16

   27 init: INIT . $@3 Opt_priority body

    $default  reduce using rule 26 ($@3)

    $@3  go to state 45


State 17

   29 ltl: LTL . optname2 $@4 ltl_body

    NAME  shift, and go to state 46

    $default  reduce using rule 36 (optname2)

    optname2  go to state 47


State 18

    0 $accept: program . $end

    $end  shift, and go to state 48


State 19

    1 program: units .
    3 units: units . unit

    error    shift, and go to state 1
    C_CODE   shift, and go to state 2
    C_DECL   shift, and go to state 3
    C_STATE  shift, and go to state 4
    C_TRACK  shift, and go to state 5
    TYPEDEF  shift, and go to state 6
    INLINE   shift, and go to state 7
    SEMI     shift, and go to state 8
    ARROW    shift, and go to state 9
    ACTIVE   shift, and go to state 10
    HIDDEN   shift, and go to state 11
    SHOW     shift, and go to state 12
    ISLOCAL  shift, and go to state 13
    CLAIM    shift, and go to state 14
    TRACE    shift, and go to state 15
    INIT     shift, and go to state 16
    LTL      shift, and go to state 17

    $end        reduce using rule 1 (program)
    PROCTYPE    reduce using rule 22 (inst)
    D_PROCTYPE  reduce using rule 22 (inst)
    TYPE        reduce using rule 67 (vis)
    UNAME       reduce using rule 67 (vis)

    unit      go to state 49
    proc      go to state 21
    inst      go to state 22
    init      go to state 23
    ltl       go to state 24
    claim     go to state 25
    events    go to state 26
    utype     go to state 27
    ns        go to state 28
    c_fcts    go to state 29
    cstate    go to state 30
    ccode     go to state 31
    vis       go to state 32
    one_decl  go to state 33
    semi      go to state 34


State 20

    2 units: unit .

    $default  reduce using rule 2 (units)


State 21

    4 unit: proc .

    $default  reduce using rule 4 (unit)


State 22

   19 proc: inst . proctype NAME $@1 l_par decl r_par $@2 Opt_priority Opt_enabler body

    PROCTYPE    shift, and go to state 50
    D_PROCTYPE  shift, and go to state 51

    proctype  go to state 52


State 23

    5 unit: init .

    $default  reduce using rule 5 (unit)


State 24

    7 unit: ltl .

    $default  reduce using rule 7 (unit)


State 25

    6 unit: claim .

    $default  reduce using rule 6 (unit)


State 26

    8 unit: events .

    $default  reduce using rule 8 (unit)


State 27

   10 unit: utype .

    $default  reduce using rule 10 (unit)


State 28

   12 unit: ns .

    $default  reduce using rule 12 (unit)


State 29

   11 unit: c_fcts .

    $default  reduce using rule 11 (unit)


State 30

   47 c_fcts: cstate .

    $default  reduce using rule 47 (c_fcts)


State 31

   46 c_fcts: ccode .

    $default  reduce using rule 46 (c_fcts)


State 32

   73 one_decl: vis . TYPE var_list
   74         | vis . UNAME var_list
   75         | vis . TYPE asgn '{' nlst '}'

    TYPE   shift, and go to state 53
    UNAME  shift, and go to state 54


State 33

    9 unit: one_decl .

    $default  reduce using rule 9 (unit)


State 34

   13 unit: semi .

    $default  reduce using rule 13 (unit)


State 35

   48 cstate: C_STATE STRING . STRING
   50       | C_STATE STRING . STRING STRING

    STRING  shift, and go to state 55


State 36

   49 cstate: C_TRACK STRING . STRING
   51       | C_TRACK STRING . STRING STRING

    STRING  shift, and go to state 56


State 37

   41 utype: TYPEDEF NAME . $@7 '{' decl_lst '}'

    $default  reduce using rule 40 ($@7)

    $@7  go to state 57


State 38

   42 nm: NAME .

    $default  reduce using rule 42 (nm)


State 39

   43 nm: INAME .

    $default  reduce using rule 43 (nm)


State 40

   45 ns: INLINE nm . l_par $@8 args r_par

    '('  shift, and go to state 58

    l_par  go to state 59


State 41

   24 inst: ACTIVE '[' . const_expr ']'
   25     | ACTIVE '[' . NAME ']'

    CONST  shift, and go to state 60
    NAME   shift, and go to state 61
    '-'    shift, and go to state 62
    '('    shift, and go to state 58

    l_par       go to state 63
    const_expr  go to state 64


State 42

   35 optname: NAME .

    $default  reduce using rule 35 (optname)


State 43

   33 claim: CLAIM optname . $@5 body

    $default  reduce using rule 32 ($@5)

    $@5  go to state 65


State 44

   39 events: TRACE $@6 . body

    '{'  shift, and go to state 66

    body  go to state 67


State 45

   27 init: INIT $@3 . Opt_priority body

    PRIORITY  shift, and go to state 68

    $default  reduce using rule 220 (Opt_priority)

    Opt_priority  go to state 69


State 46

   37 optname2: NAME .

    $default  reduce using rule 37 (optname2)


State 47

   29 ltl: LTL optname2 . $@4 ltl_body

    $default  reduce using rule 28 ($@4)

    $@4  go to state 70


State 48

    0 $accept: program $end .

    $default  accept


State 49

    3 units: units unit .

    $default  reduce using rule 3 (units)


State 50

   20 proctype: PROCTYPE .

    $default  reduce using rule 20 (proctype)


State 51

   21 proctype: D_PROCTYPE .

    $default  reduce using rule 21 (proctype)


State 52

   19 proc: inst proctype . NAME $@1 l_par decl r_par $@2 Opt_priority Opt_enabler body

    NAME  shift, and go to state 71


State 53

   73 one_decl: vis TYPE . var_list
   75         | vis TYPE . asgn '{' nlst '}'

    NAME  shift, and go to state 72
    ASGN  shift, and go to state 73

    $default  reduce using rule 71 (asgn)

    asgn      go to state 74
    var_list  go to state 75
    ivar      go to state 76
    vardcl    go to state 77


State 54

   74 one_decl: vis UNAME . var_list

    NAME  shift, and go to state 72

    var_list  go to state 78
    ivar      go to state 76
    vardcl    go to state 77


State 55

   48 cstate: C_STATE STRING STRING .
   50       | C_STATE STRING STRING . STRING

    STRING  shift, and go to state 79

    $default  reduce using rule 48 (cstate)


State 56

   49 cstate: C_TRACK STRING STRING .
   51       | C_TRACK STRING STRING . STRING

    STRING  shift, and go to state 80

    $default  reduce using rule 49 (cstate)


State 57

   41 utype: TYPEDEF NAME $@7 . '{' decl_lst '}'

    '{'  shift, and go to state 81


State 58

   15 l_par: '(' .

    $default  reduce using rule 15 (l_par)


State 59

   45 ns: INLINE nm l_par . $@8 args r_par

    $default  reduce using rule 44 ($@8)

    $@8  go to state 82


State 60

  169 const_expr: CONST .

    $default  reduce using rule 169 (const_expr)


State 61

   25 inst: ACTIVE '[' NAME . ']'

    ']'  shift, and go to state 83


State 62

  170 const_expr: '-' . const_expr

    CONST  shift, and go to state 60
    '-'    shift, and go to state 62
    '('    shift, and go to state 58

    l_par       go to state 63
    const_expr  go to state 84


State 63

  171 const_expr: l_par . const_expr r_par

    CONST  shift, and go to state 60
    '-'    shift, and go to state 62
    '('    shift, and go to state 58

    l_par       go to state 63
    const_expr  go to state 85


State 64

   24 inst: ACTIVE '[' const_expr . ']'
  172 const_expr: const_expr . '+' const_expr
  173           | const_expr . '-' const_expr
  174           | const_expr . '*' const_expr
  175           | const_expr . '/' const_expr
  176           | const_expr . '%' const_expr

    '+'  shift, and go to state 86
    '-'  shift, and go to state 87
    '*'  shift, and go to state 88
    '/'  shift, and go to state 89
    '%'  shift, and go to state 90
    ']'  shift, and go to state 91


State 65

   33 claim: CLAIM optname $@5 . body

    '{'  shift, and go to state 66

    body  go to state 92


State 66

   57 body: '{' . $@9 sequence OS $@10 '}'

    $default  reduce using rule 55 ($@9)

    $@9  go to state 93


State 67

   39 events: TRACE $@6 body .

    $default  reduce using rule 39 (events)


State 68

  221 Opt_priority: PRIORITY . CONST

    CONST  shift, and go to state 94


State 69

   27 init: INIT $@3 Opt_priority . body

    '{'  shift, and go to state 66

    body  go to state 95


State 70

   29 ltl: LTL optname2 $@4 . ltl_body

    error  shift, and go to state 96
    '{'    shift, and go to state 97

    ltl_body  go to state 98


State 71

   19 proc: inst proctype NAME . $@1 l_par decl r_par $@2 Opt_priority Opt_enabler body

    $default  reduce using rule 17 ($@1)

    $@1  go to state 99


State 72

   91 vardcl: NAME .
   92       | NAME . ':' CONST
   93       | NAME . '[' const_expr ']'

    '['  shift, and go to state 100
    ':'  shift, and go to state 101

    $default  reduce using rule 91 (vardcl)


State 73

   72 asgn: ASGN .

    $default  reduce using rule 72 (asgn)


State 74

   75 one_decl: vis TYPE asgn . '{' nlst '}'

    '{'  shift, and go to state 102


State 75

   73 one_decl: vis TYPE var_list .

    $default  reduce using rule 73 (one_decl)


State 76

   82 var_list: ivar .
   83         | ivar . ',' var_list

    ','  shift, and go to state 103

    $default  reduce using rule 82 (var_list)


State 77

   86 ivar: vardcl .
   87     | vardcl . ASGN '{' c_list '}'
   88     | vardcl . ASGN expr
   89     | vardcl . ASGN ch_init

    ASGN  shift, and go to state 104

    $default  reduce using rule 86 (ivar)


State 78

   74 one_decl: vis UNAME var_list .

    $default  reduce using rule 74 (one_decl)


State 79

   50 cstate: C_STATE STRING STRING STRING .

    $default  reduce using rule 50 (cstate)


State 80

   51 cstate: C_TRACK STRING STRING STRING .

    $default  reduce using rule 51 (cstate)


State 81

   41 utype: TYPEDEF NAME $@7 '{' . decl_lst '}'

    HIDDEN   shift, and go to state 11
    SHOW     shift, and go to state 12
    ISLOCAL  shift, and go to state 13

    $default  reduce using rule 67 (vis)

    vis       go to state 32
    one_decl  go to state 105
    decl_lst  go to state 106


State 82

   45 ns: INLINE nm l_par $@8 . args r_par

    C_EXPR       shift, and go to state 107
    RUN          shift, and go to state 108
    LEN          shift, and go to state 109
    ENABLED      shift, and go to state 110
    GET_P        shift, and go to state 111
    PC_VAL       shift, and go to state 112
    TIMEOUT      shift, and go to state 113
    NONPROGRESS  shift, and go to state 114
    CONST        shift, and go to state 115
    NAME         shift, and go to state 116
    PNAME        shift, and go to state 117
    SND          shift, and go to state 118
    ALWAYS       shift, and go to state 119
    EVENTUALLY   shift, and go to state 120
    NEXT         shift, and go to state 121
    '-'          shift, and go to state 122
    '~'          shift, and go to state 123
    '('          shift, and go to state 58

    $default  reduce using rule 253 (args)

    l_par     go to state 124
    cexpr     go to state 125
    varref    go to state 126
    pfld      go to state 127
    cmpnd     go to state 128
    expr      go to state 129
    ltl_expr  go to state 130
    args      go to state 131
    arg       go to state 132


State 83

   25 inst: ACTIVE '[' NAME ']' .

    $default  reduce using rule 25 (inst)


State 84

  170 const_expr: '-' const_expr .
  172           | const_expr . '+' const_expr
  173           | const_expr . '-' const_expr
  174           | const_expr . '*' const_expr
  175           | const_expr . '/' const_expr
  176           | const_expr . '%' const_expr

    $default  reduce using rule 170 (const_expr)


State 85

  171 const_expr: l_par const_expr . r_par
  172           | const_expr . '+' const_expr
  173           | const_expr . '-' const_expr
  174           | const_expr . '*' const_expr
  175           | const_expr . '/' const_expr
  176           | const_expr . '%' const_expr

    '+'  shift, and go to state 86
    '-'  shift, and go to state 87
    '*'  shift, and go to state 88
    '/'  shift, and go to state 89
    '%'  shift, and go to state 90
    ')'  shift, and go to state 133

    r_par  go to state 134


State 86

  172 const_expr: const_expr '+' . const_expr

    CONST  shift, and go to state 60
    '-'    shift, and go to state 62
    '('    shift, and go to state 58

    l_par       go to state 63
    const_expr  go to state 135


State 87
